# smart_parking

./: .env.example  .gitignore  CLAUDE.md  README.md  dev.sh  package.json  turbo.json
apps/admin/: components.json  nuxt.config.ts  package.json
apps/admin/app/: app.vue
apps/admin/app/assets/: tailwind.css
apps/admin/app/components/: AddDeviceDialog.vue  AddMemberDialog.vue  AddZoneDialog.vue  AppSidebar.vue  LotNav.vue  SessionDetailSheet.vue  SlotDetailSheet.vue  SlotDialog.vue
apps/admin/app/composables/: useDeviceActions.ts  useHistory.ts  useLotEditor.ts
apps/admin/app/layouts/: default.vue
apps/admin/app/pages/: confirm.vue  devices.vue  index.vue  login.vue  sessions.vue
apps/mobile/: components.json  nuxt.config.ts  package.json
apps/mobile/app/components/: LotCard.vue  LotMap.vue  LotMapView.vue  SlotCell.vue  SlotDetailSheet.vue
apps/mobile/app/composables/: useNominatim.ts
edge/: docker-compose.yml
edge/firmware/: platformio.ini
edge/firmware/src/: main.cpp
edge/gateway/: Dockerfile  pyproject.toml
edge/gateway/gateway/: config.py  debouncer.py  health_reporter.py  main.py  mqtt_listener.py  supabase_writer.py
edge/gateway/gateway/vision/: detector.py  detector_pc.py
edge/mosquitto/config/: mosquitto.conf
supabase/: seed.sql
supabase/migrations/: 0000_app.sql  0001_init.sql  0002_camera_slot_regions.sql  0003_member_lookup.sql  0004_asymmetric_debounce.sql  0005_lots_nearby.sql  0006_lot_map_config.sql  0007_lot_layout.sql  0008_confidence_guard.sql  0009_lat_lng_extract.sql  0010_lot_settings_detection_params.sql
(+13 files in other folders)
